--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
                 <a href="a" class="instagram-login">Continue como Guilherme_Nenezin</a>
                 <a href="a" class="instagram-logout">Remover conta</a>
             </div>
+            <div class="group">
+                <p class="not-account">Não é Guilherme_nenezin?</p>
+                <p class="notaccount">
+                    <span class="link-blue">Alternar Contas</span>
+                    ou
+                    <span class="link-blue">Inscreva-se</span>
+                </p>
+            </div>
+            <div class="get-the-app">
+                <p class="get-app">Baixe o aplicativo</p>
+                <div class="download">
+                    <a href="#" class="app-download"></a>
+                    <a href="#" class="app-download"></a>
+
+                </div>
+            </div> 
         </div>
 
     </div>
