--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
             </div>
             <div class="group">
                 <p class="not-account">Não é Guilherme_nenezin?</p>
-                <p class="notaccount">
+                <p class="not-account">
                     <span class="link-blue">Alternar Contas</span>
                     ou
                     <span class="link-blue">Inscreva-se</span>
                 </p>
             </div>
             <div class="get-the-app">
-                <p class="get-app">Baixe o aplicativo</p>
+                <p class="get-the-app">Baixe o aplicativo</p>
                 <div class="download">
                     <a href="#" class="app-download"></a>
                     <a href="#" class="app-download"></a>
